--- a/index.html
+++ b/index.html
@@ -34,5 +34,9 @@
     </div>
   </main>
   <script src="main.js"></script>
+
+  <footer style="text-align:center; font-size: 0.9em; color: #888; margin-top: 2em;">
+    Design: ODA Tomohiro
+  </footer>
 </body>
 </html>
