--- a/index.html
+++ b/index.html
@@ -23,14 +23,16 @@
     </div>
     <div class="frame-controls">
       <button id="back10">←10</button>
+      <button id="back5">←5</button>
       <button id="back1">←1</button>
       <input type="range" id="frame-slider" min="0" max="1000" value="0" />
       <button id="forward1">1→</button>
+      <button id="forward5">5→</button>
       <button id="forward10">10→</button>
     </div>
     <div class="video-container">
-      <video id="video" width="640" height="360" controls></video>
-      <canvas id="canvas" width="640" height="360"></canvas>
+      <video id="video" controls></video>
+      <canvas id="canvas"></canvas>
     </div>
   </main>
   <script src="main.js"></script>
