--- a/index.html
+++ b/index.html
@@ -37,8 +37,6 @@
   </main>
   <script src="main.js"></script>
 
-  <footer style="text-align:center; font-size: 0.9em; color: #888; margin-top: 2em;">
-    Design: ODA Tomohiro
-  </footer>
+  <div style="position:absolute; top:10px; right:10px; font-size:0.9em; color:#ccc;">Design: ODA Tomohiro</div>
 </body>
 </html>
