--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   </header>
   <main>
     <input type="file" id="video-upload" accept="video/*" />
+    <div id="fps-display" style="font-size: 0.9em; margin: 5px 0 10px 10px; color: #333;"></div>
     <div class="controls">
       <label for="object-select">物体番号:</label>
       <input type="number" id="object-select" min="1" value="1" />
@@ -34,9 +35,17 @@
       <video id="video" controls></video>
       <canvas id="canvas"></canvas>
     </div>
+    <div class="instructions" style="margin: 20px 10px; font-size: 14px; background-color: #f9f9f9; border: 1px solid #ccc; padding: 10px;">
+      <strong>操作説明:</strong><br>
+      ①「ファイルを選択」で動画を読み込み、動画ファイルのfpsを入力する<br>
+      ②「物体番号」の指定により複数物体の追跡が可能<br>
+      ③「原点設定」と「スケール設定」を画面内で行う<br>
+      ④トラッキングを行い、CSVとして出力<br>
+      　→ トラッキングして１フレーム進む：Shift＋クリック<br>
+      　→ トラッキングして５フレーム進む：ctrl（またはcmd）＋クリック
+    </div>
   </main>
   <script src="main.js"></script>
-
   <div style="position:absolute; top:10px; right:10px; font-size:0.9em; color:#ccc;">Design: ODA Tomohiro</div>
 </body>
 </html>
