--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
   <header>
-    <img src="assets/Pl.png" alt="Logo" class="logo"/>
+    <img src="Pl.png" alt="Logo" class="logo"/>
     <h1>Tracking Analysis for Physics</h1>
   </header>
   <main>
