--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     
     <div class="instructions" style="margin: 20px 10px; font-size: 14px; background-color: #f9f9f9; border: 1px solid #ccc; padding: 10px;">
       <strong>操作説明:</strong><br>
-      ①「ファイルを選択」で動画を読み込み、動画ファイルの fps を入力する<br>
+      ①「ファイルを選択」で動画を読み込み、動画ファイルの fps を確認（必要なら入力）<br>
       ②「物体番号」の指定により複数物体の追跡が可能<br>
       ③「原点設定」と「スケール設定」を画面内で行う<br>
       ④トラッキングを行い、CSVとして出力<br>
