--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <button id="custom-forward">N→</button></div>
 
     <div class="video-container">
-      <video id="video" controls></video>
+      <video id="video"  preload="auto"></video>
       <canvas id="canvas"></canvas>
     </div>
     
