--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <header>
     <img src="Pl.png" alt="Logo" class="logo"/>
     <h1>Tracking Analysis for Physics</h1>
-    <img id="pel-logo" src="pel-logo.png" alt="Physics Exam Lab">
+    <!--<img id="pel-logo" src="pel-logo.png" alt="Physics Exam Lab">-->
   </header>
   <main>
     <input type="file" id="video-upload" accept="video/*" />
