--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 </head>
 <body>
   <header>
-    <img src="Pl.png" alt="Logo" class="logo"/>
+    <img src="pllab.png" alt="Logo" class="logo"/>
+    <!--<img src="Pl.png" alt="Logo" class="logo"/>-->
     <h1>Tracking Analysis for Physics</h1>
     <!--<img id="pel-logo" src="pel-logo.png" alt="Physics Exam Lab">-->
   </header>
